novi angular + prvi izgled

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,16 +1,4 @@
-<p>GoDonate</p>
-
-<table>
-  <thead>
-
-  </thead>
-  <tr *ngFor="let x of drzava_podaci">
-    <td>
-      {{x.naziv}}
-    </td>
-    <td>
-      {{x.skracenica}}
-    </td>
-  </tr>
-</table>
-
+<app-nav></app-nav>
+<section>
+<router-outlet></router-outlet>
+</section>
