--- a/Angular/src/app/nav/nav.component.html
+++ b/Angular/src/app/nav/nav.component.html
@@ -9,4 +9,16 @@
       </ul>
     </nav>
   </div>
+
+  <!--<div class="container" *ngIf="loginInfo().isLogiran">
+    <a routerLink="/" class="logo">GoDonate</a>
+    <nav>
+      <ul>
+        <li> <a routerLink="/">Home</a></li>
+        <li> <a routerLink="/about">About</a></li>
+      </ul>
+    </nav>
+  </div>-->
 </header>
+
+
