home page, aboutUs

--- a/Angular/src/app/about/about.component.html
+++ b/Angular/src/app/about/about.component.html
@@ -1,1 +1,12 @@
-<p>about works!</p>
+<div class="pozadina">
+  <p style="font-weight: bold; font-family: Montserrat; font-size: 70px; text-align: center"> About us!</p>
+  <br>
+  <br>
+  <br><br>
+  <p style="font-weight: bold; font-family: Montserrat; font-size: 90px; text-align: center">We’re here to help people, to help each other</p>
+  <br><br><br><br>
+
+  <p style="font-weight: bold; font-family: Montserrat; font-size: 30px; text-align: center"> GoDonate is a community-powered fundraising platform. We believe that help is powerful, which is why we’re committed to making it safe and easy for anyone to give and get help.</p>
+  <br> <br> <br>
+
+</div>
