--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="pozadina">
+  <p style="font-weight: bold; font-family: Montserrat; font-size: 70px; text-align: center"> Welcome!</p>
+  <br>
+  <br>
+  <br><br>
+  <p style="font-weight: bold; font-family: Montserrat; font-size: 40px; text-align: center">We are glad that you decided to donate through our site!</p>
+  <br><br><br><br>
+
+  <p style="font-weight: bold; font-family: Montserrat; font-size: 30px; text-align: center"> To see stories and be able to donate, please log in.</p>
+  <br> <br> <br>
+
+  <div class="d-grid gap-2">
+    <button routerLink="/logIn" class="btn btn-dark" type="button">LOGIN</button>
+  </div>
+
+</div>
