--- a/Angular/src/app/log-in/log-in.component.html
+++ b/Angular/src/app/log-in/log-in.component.html
@@ -1,4 +1,4 @@
-<h2> Log in</h2>
+<p style="font-weight: bold; font-size: 50px"> Log in</p>
 
 <div *ngIf="porukaUspjesno" class="alert alert-success" role="alert">
   A simple success alert—check it out!
@@ -10,16 +10,16 @@
 
 <form [formGroup]="LogInForma" (ngSubmit)="onSubmit()">
   <label>
-    <h6> Username: </h6>
-    <input type="text" [(ngModel)]="this.username "formControlName="username">
+    <p style="font-weight: bold; font-size: 17px;"> Username: </p>
+    <input type="text" [(ngModel)]="this.username "formControlName="username" placeholder="username">
     <div *ngIf="submitted && LogInForma.controls.username.errors" class="error">
       <div *ngIf="LogInForma.controls.username.errors?.['required']"> You have to enter username! </div>
     </div>
   </label>
 
   <label>
-    <h6> Password: </h6>
-    <input type="password" [(ngModel)]="this.password" formControlName="password">
+    <p style="font-weight: bold; font-size: 17px;"> Password: </p>
+    <input type="password" [(ngModel)]="this.password" formControlName="password" placeholder="*****">
     <div *ngIf="submitted && LogInForma.controls.password.errors" class="error">
       <div *ngIf="LogInForma.controls.password.errors?.['required']"> You have to enter password! </div>
     </div>
