--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -4,7 +4,7 @@ body, html {
   margin: 0 auto;
 }
 body {
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   font-size: 18px;
   background-image: url("https://img.freepik.com/premium-vector/donation-box-charity-concept-human-hands-putting-money-cash-love-heart-donation-box-together-helping-doing-charity-vector-illustration_140689-3158.jpg?w=2000");
   background-repeat: no-repeat;
