--- a/Angular/src/app/stories/stories.component.html
+++ b/Angular/src/app/stories/stories.component.html
@@ -12,62 +12,53 @@
 </div>
 </div>
 
-<button class="btn btn-dark" (click)="otvoriFormu=true">Add your story</button>
+<button class="btn btn-dark" (click)="novaPrica()">Add your story</button>
 
-<div *ngIf="otvoriFormu" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
+<div *ngIf="odabranaPrica!=null" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLiveLabel">New story</h5>
-        <button type="button" class="btn-close" aria-label="Close" (click)="otvoriFormu=false"></button>
+        <button type="button" class="btn-close" aria-label="Close" (click)="odabranaPrica=null"></button>
       </div>
+
       <div class="modal-body">
         <div class="mb-3">
           <label class="form-label">Title</label>
-          <input class="form-control" placeholder="Title" [(ngModel)]="prica.naslov">
+          <input class="form-control" placeholder="Title" [(ngModel)]="odabranaPrica.naslov" >
         </div>
         <div class="mb-3">
           <label class="form-label">Description</label>
-          <textarea class="form-control" rows="4" placeholder="Description">
+          <textarea class="form-control" rows="4" placeholder="Description" [(ngModel)]="odabranaPrica.opis">
             </textarea>
         </div>
-
-
-
         <div class="mb-3">
           <label for="formFile" class="form-label">Upload your picture</label>
-          <input class="form-control" type="file" id="formFile" accept="image/png">
+          <input class="form-control" type="file" id="formFile" accept="image/*" (change)="generisiPreview()">
+          <img style="width: 100%; height: 100%" src="{{odabranaPrica.slika}}">
         </div>
-
 
           <div class="mb-3">
             <label class="form-label">Money goal</label>
-            <input type="number" class="form-control" placeholder="500" >
+            <input type="number" class="form-control" placeholder="500" [(ngModel)]="odabranaPrica.novcani_cilj" >
           </div>
 
         <div class="mb-3">
-          <label class="form-label">Valuta</label>
-          <select class="form-control" >
-            <option *ngFor="let x of valutaPodaci" [value]="x.id">{{x.skracenica}}</option>
-          </select>
-        </div>
-
-        <div class="mb-3">
           <label class="form-label">Location</label>
-          <input class="form-control" placeholder="Enter your adress" >
+          <input class="form-control" placeholder="Enter your adress" [(ngModel)]="odabranaPrica.lokacija"  >
         </div>
 
         <div class="mb-3">
           <label class="form-label">Category</label>
-          <select class="form-control" >
+          <select class="form-control" [(ngModel)]="odabranaPrica.kategorija_id"  >
             <option *ngFor="let x of kategorijaPodaci" [value]="x.id">{{x.naziv}}</option>
           </select>
         </div>
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="otvoriFormu=false">Close</button>
-        <button type="button" class="btn btn-dark" >Save </button>
+        <button type="button" class="btn btn-secondary" (click)="odabranaPrica=null">Close</button>
+        <button type="button" class="btn btn-dark" (click)="SaveDugme()">Save </button>
       </div>
 
     </div>
