--- a/Angular/src/app/log-in/log-in.component.html
+++ b/Angular/src/app/log-in/log-in.component.html
@@ -17,7 +17,12 @@
     </div>
   </label>
 
+
   <button type="click" class="cta" (click)="onSubmit()">Log in </button>
+  <br><br>
+
+  <a style="font-size: 25px; text-decoration-line: underline" href="/registration">Dont have an account? Register here!</a>
+
 </form>
 
 
