--- a/Angular/src/app/nav/nav.component.html
+++ b/Angular/src/app/nav/nav.component.html
@@ -1,11 +1,12 @@
 <header>
   <div class="container" *ngIf="!loginInfo().isLogiran">
-    <a routerLink="/" class="logo">GoDonate</a>
+    <a class="logo">GoDonate</a>
     <nav>
       <ul>
         <li> <a routerLink="/">Home</a></li>
         <li> <a routerLink="/about">About</a></li>
-        <li> <a routerLink="/logIn">LogIn</a></li>
+        <li> <a routerLink="/logIn">Sign up</a></li>
+
       </ul>
     </nav>
   </div>
@@ -15,9 +16,8 @@
     <a class="logo">GoDonate</a>
     <nav>
       <ul>
-       <!-- <li> <a routerLink="/">Home</a></li>
-        <li> <a routerLink="/about">About</a></li>-->
         <li><a style="color: white" (click)="logOut()">Log Out</a></li>
+        <li><a style="color: white" routerLink="/userProfile" >User profile</a></li>
       </ul>
     </nav>
   </div>
