user profile komponenta izgled

--- a/Angular/src/app/nav/nav.component.html
+++ b/Angular/src/app/nav/nav.component.html
@@ -16,8 +16,9 @@
     <a class="logo">GoDonate</a>
     <nav>
       <ul>
-        <li><a style="color: white" (click)="logOut()">Log Out</a></li>
+        <li><a style="color: white" routerLink="/stories">Stories</a></li>
         <li><a style="color: white" routerLink="/userProfile" >User profile</a></li>
+        <li><a style="color: white" (click)="logOut()">Log Out</a></li>
       </ul>
     </nav>
   </div>
