--- a/Angular/src/app/stories/stories.component.scss
+++ b/Angular/src/app/stories/stories.component.scss
@@ -1,9 +1,31 @@
-
-
-
-.container{
-  display:flex;
-  width:100%;
+.kontejner{
+  background-color: rgba(0,0,0,0.567);
+  margin:50px;
+  padding: 20px;
 }
+h1{
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-family: Montserrat;
+}
+h3{
+  font-weight: bold;
+}
+.kartica {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 250px;
+  margin: auto;
+  text-align: center;
+  background-color: white;
+  display: inline-block;
+}
+.kartica img{
+  width: 50%;
+  height: 50%;
+}
+
+
+
 
 
