--- a/Angular/src/app/stories/stories.component.scss
+++ b/Angular/src/app/stories/stories.component.scss
@@ -14,16 +14,16 @@ h3{
 }
 .kartica {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 250px;
+  max-width:20%;
+  max-height:40%;
   margin: auto;
   text-align: center;
   background-color: white;
   display: inline-block;
 }
-.kartica img{
-  width: 50%;
-  height: 50%;
-}
+
+
+
 
 
 
