--- a/Angular/src/app/registration/registration.component.html
+++ b/Angular/src/app/registration/registration.component.html
@@ -7,10 +7,10 @@
     <div class="col-md-6">
       <label for="nameInput"  class="form-label" style="color: white">First Name</label>
       <input type="text" [ngModelOptions]="{standalone: true}" class="form-control" id="nameInput"
-             [(ngModel)]="korisnik.ime" placeholder="Enter first name">
-      <!--<div class="form-text text-danger" *ngIf="ime.errors?.['required'] && (ime.dirty || ime.touched)">
+             [(ngModel)]="korisnik.ime" placeholder="Enter first name" this.formControlName="ime">
+      <div class="form-text text-danger" *ngIf="ime.errors?.['required'] && (ime.dirty || ime.touched)">
         You have to enter your first name.
-      </div>-->
+      </div>
     </div>
 
     <div class="col-md-6">
