--- a/Angular/src/app/user-profile/user-profile.component.html
+++ b/Angular/src/app/user-profile/user-profile.component.html
@@ -17,7 +17,7 @@
 
   <div *ngIf="otvoriFormu==true" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content" style="background-color: gray">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLiveLabel" style="font-weight: bold">New profile picture</h5>
           <button type="button" class="btn-close" aria-label="Close" (click)="otvoriFormu=false"></button>
@@ -45,9 +45,9 @@
 
 <div *ngIf="otvoriFormu2==true" class="modal fade show" id="exampleModalLive2" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content"  style="background-color: gray">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLiveLabel2" style="font-weight: bold">New profile picture</h5>
+        <h5 class="modal-title" id="exampleModalLiveLabel2" style="font-weight: bold">Change password</h5>
         <button type="button" class="btn-close" aria-label="Close" (click)="otvoriFormu2=false"></button>
       </div>
 
