--- a/Angular/src/app/registration/registration.component.scss
+++ b/Angular/src/app/registration/registration.component.scss
@@ -1,6 +1,14 @@
 .pozadina{
   background-color: rgba(0,0,0,0.576);
-  margin:50px;
+  margin:5px;
   padding: 20px;
 }
-
+.error{
+    margin-top: -20px;
+    color:red ;
+    padding: .1em;
+    display: inline-block;
+    font-size: .9em;
+    margin-bottom: 20px;
+  font-weight: bold;
+}
