--- a/Angular/src/app/stories/stories.component.scss
+++ b/Angular/src/app/stories/stories.component.scss
@@ -1,6 +1,6 @@
 .kontejner{
   background-color: rgba(0,0,0,0.567);
-  margin:50px;
+  margin:5px;
   padding: 20px;
 }
 h1{
@@ -11,6 +11,10 @@ h1{
 }
 h3{
   font-weight: bold;
+}
+h4{
+  font-weight: bold;
+  color: green;
 }
 .kartica {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
