--- a/Angular/src/app/user-profile/user-profile.component.scss
+++ b/Angular/src/app/user-profile/user-profile.component.scss
@@ -11,8 +11,8 @@ h3{
   background-color: lightgrey;
 }
 .kontejner{
-  background-color: rgba(0,0,0,0.567);
-  margin:50px;
+background-color: rgba(0,0,0,0.567);
+  margin:5px;
   padding: 20px;
 }
 
@@ -21,5 +21,6 @@ h3{
   max-width: 500px;
   margin: auto;
   text-align: center;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
