--- a/Angular/src/app/registration/registration.component.html
+++ b/Angular/src/app/registration/registration.component.html
@@ -11,9 +11,9 @@
       <div *ngIf="klik && register.controls.ime.errors" class="error">
       <div *ngIf="ime.errors?.['required'] && (ime.dirty || ime.touched)">
         First name is required. </div>
-      <div *ngIf="ime.errors?.['minLength'] && (ime.dirty || ime.touched)">
-        Minimum two characters. </div>
-    </div>
+<!--      <div *ngIf="ime.errors?.['minLength'] && (ime.dirty || ime.touched)">-->
+<!--        Minimum two characters. </div>-->
+ </div>
     </div>
 
     <div class="col-md-6">
