--- a/Angular/src/app/nav/nav.component.html
+++ b/Angular/src/app/nav/nav.component.html
@@ -5,14 +5,14 @@
       <ul>
         <li> <a routerLink="/">Home</a></li>
         <li> <a routerLink="/about">About</a></li>
-        <li> <a routerLink="/logIn">Sign up</a></li>
+        <li> <a routerLink="/logIn">Log in</a></li>
 
       </ul>
     </nav>
   </div>
 
 
-  <div class="container" *ngIf="loginInfo().isLogiran && !loginInfo().autentifikacijaToken.korisnickinalog.isAdmin">
+  <div class="container" *ngIf="loginInfo().isLogiran && loginInfo().autentifikacijaToken.korisnickinalog.isKorisnik">
     <a class="logo">GoDonate</a>
     <nav>
       <ul>
@@ -23,14 +23,14 @@
     </nav>
   </div>
 
-  <div class="container" *ngIf="loginInfo().autentifikacijaToken.korisnickinalog.isAdmin">
+  <div class="container" *ngIf="loginInfo().isLogiran && loginInfo().autentifikacijaToken.korisnickinalog.isAdmin">
     <a class="logo">GoDonate</a>
     <nav>
       <ul>
         <li><a style="color: white" routerLink="/stories">Stories</a></li>
         <li><a style="color: white" routerLink="/userProfile" >User profile</a></li>
         <li><a style="color: white" (click)="logOut()">Log Out</a></li>
-        <li><a style="color: white">Admin</a></li>
+        <li><a style="color: white" routerLink="/admin">Admin</a></li>
       </ul>
     </nav>
   </div>
