--- a/Angular/src/app/stories/stories.component.html
+++ b/Angular/src/app/stories/stories.component.html
@@ -1,10 +1,15 @@
+<a (click)="tvojePrice()">Your stories</a>
+<br>
+<a (click)="drugePrice()">Other stories</a>
 <div class="kontejner">
 <h1>Stories opened for donations</h1>
   <div *ngFor="let x of prica_podaci" class="kartica">
-    <img src="{{getSliku(x)}}" style="height: 50%; width: 50%;">
+    <img src="{{getSliku(x)}}" style="max-height:10%; max-width:20%; float:left; margin:3%">
     <h3>{{x.naslov}}</h3>
+    <h3>{{x.opis}}</h3>
     <h4>GOAL: {{x.novcani_cilj}} $</h4>
-   <a class="btn btn-dark" (click)="openDetails(x)"> Details</a>
+   <a class="btn btn-dark" (click)="openDetails(x)" style="margin-left:90%; margin-bottom: 1%"> Details</a>
+    <hr>
   </div>
   <br> <br> <br>
   <button type="button" class="btn btn-dark btn-lg" style="margin-left: 80%" (click)="novaPrica()" >Add your story</button>
