--- a/Angular/src/app/stories/stories.component.scss
+++ b/Angular/src/app/stories/stories.component.scss
@@ -2,6 +2,8 @@
   background-color: rgba(0,0,0,0.567);
   margin:5px;
   padding: 20px;
+  max-height:100%;
+  max-width:100%;
 }
 h1{
   color: white;
@@ -10,6 +12,7 @@ h1{
   font-family: Montserrat;
 }
 h3{
+  margin-top:5%;
   font-weight: bold;
 }
 h4{
@@ -18,8 +21,8 @@ h4{
 }
 .kartica {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width:20%;
-  max-height:40%;
+  width:100%;
+  height:10%;
   margin: auto;
   text-align: center;
   background-color: white;
