--- a/Angular/src/app/story-details/story-details.component.html
+++ b/Angular/src/app/story-details/story-details.component.html
@@ -12,7 +12,8 @@
     <div class="detalji">
       <h4>We will need <b>{{x.novcaniCilj}}$</b>  to make our story happen.</h4>
       <div class="progress" style="height: 5%">
-        <div class="progress-bar" role="progressbar" style="width: 25%; background-color: black" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+        <div class="progress-bar" role="progressbar" style="width:25%; background-color: black" aria-valuemin="0" aria-valuenow="25"
+             aria-valuemax="100">{{ukupnoPrica}}%</div>
       </div>
       <br>
       <h4>You can find us in <b>{{x.lokacija}}</b></h4>
